--- a/src/styles/far.css
+++ b/src/styles/far.css
@@ -16,7 +16,10 @@ pre code,
 
 pre .string,
 pre .ruby .string,
-pre .haskell .type,
+pre .function .title,
+pre .class .title,
+pre .haskell .label,
+pre .ini .title,
 pre .tag .value,
 pre .css .rules .value,
 pre .css .rules .value .number,
@@ -39,8 +42,10 @@ pre .tex .command {
 
 pre .keyword,
 pre .css .id,
-pre .title,
-pre .haskell .type,
+pre .function .title,
+pre .class .title,
+pre .haskell .label,
+pre .ini .title,
 pre .vbscript .built_in,
 pre .sql .aggregate,
 pre .rsl .built_in,
@@ -48,6 +53,7 @@ pre .smalltalk .class,
 pre .xml .tag .title,
 pre .winutils,
 pre .flow,
+pre .lisp .title,
 pre .change,
 pre .envvar,
 pre .bash .variable,
@@ -92,19 +98,21 @@ pre .input_number {
 
 pre .keyword,
 pre .css .id,
-pre .title,
-pre .haskell .type,
+pre .function .title,
+pre .class .title,
+pre .haskell .label,
+pre .ini .title,
 pre .vbscript .built_in,
 pre .sql .aggregate,
 pre .rsl .built_in,
 pre .smalltalk .class,
+pre .xml .tag .title,
 pre .winutils,
 pre .flow,
+pre .lisp .title,
 pre .apache .tag,
 pre .nginx .built_in,
 pre .tex .command,
-pre .tex .special,
-pre .request,
-pre .status {
+pre .tex .special {
   font-weight: bold;
 }
