--- a/src/styles/googlecode.css
+++ b/src/styles/googlecode.css
@@ -17,15 +17,15 @@ pre .comment * {
 }
 
 pre .keyword,
+pre .ruby .function .keyword,
+pre .function .keyword,
+pre .sub .keyword,
 pre .method,
 pre .list .title,
 pre .tag .title,
 pre .setting .value,
 pre .winutils,
-pre .tex .command,
-pre .http .title,
-pre .request,
-pre .status {
+pre .tex .command {
   color: #008;
 }
 
@@ -67,7 +67,7 @@ pre .css .function {
 }
 
 pre .class .title,
-pre .haskell .type,
+pre .haskell .label,
 pre .smalltalk .class,
 pre .javadoctag,
 pre .yardoctag,
