--- a/src/styles/idea.css
+++ b/src/styles/idea.css
@@ -32,8 +32,7 @@ pre .pi,
 pre .chunk,
 pre .shebang,
 pre .apache .cbracket,
-pre .input_number,
-pre .http .title {
+pre .input_number {
   color: #808000;
 }
 
@@ -53,9 +52,7 @@ pre .css .function,
 pre .ini .title,
 pre .css .class,
 pre .list .title,
-pre .tex .command,
-pre .request,
-pre .status {
+pre .tex .command {
   font-weight: bold;
   color: #000080;
 }
