--- a/src/styles/arta.css
+++ b/src/styles/arta.css
@@ -9,6 +9,7 @@ pre code
   background: #222;
 }
 
+pre .header,
 pre .profile .header *,
 pre .ini .title
 {
@@ -18,13 +19,12 @@ pre .ini .title
 pre .comment,
 pre .javadoc,
 pre .preprocessor,
-pre .preprocessor .title,
 pre .shebang,
 pre .profile .summary,
 pre .diff,
 pre .pi,
 pre .doctype,
-pre .tag,
+pre .xml .tag,
 pre .template_comment,
 pre .css .rules,
 pre .tex .special
@@ -37,8 +37,8 @@ pre .symbol,
 pre .diff .change,
 pre .regexp,
 pre .xml .attribute,
-pre .smalltalk .char,
 pre .xml .value,
+pre .smalltalk .char,
 pre .ini .value
 {
   color: #ffcc33;
@@ -52,7 +52,7 @@ pre .addition
 
 pre .built_in,
 pre .literal,
-pre .vhdl .typename,
+pre .vhdl .type,
 pre .go .constant,
 pre .go .typename,
 pre .ini .keyword,
@@ -73,7 +73,7 @@ pre .parser3 .variable
 }
 
 pre .keyword,
-pre .tag .title,
+pre .xml .tag .title,
 pre .css .tag,
 pre .css .class,
 pre .css .id,
@@ -81,20 +81,19 @@ pre .css .pseudo,
 pre .css .attr_selector,
 pre .lisp .title,
 pre .winutils,
-pre .tex .command,
-pre .request,
-pre .status
+pre .tex .command
 {
   color: #6644aa;
 }
 
-pre .title,
+pre .class .title,
 pre .ruby .constant,
 pre .vala .constant,
 pre .parent,
 pre .deletion,
 pre .template_tag,
 pre .css .keyword,
+pre .javascript .title,
 pre .objectivec .class .id,
 pre .smalltalk .class,
 pre .lisp .keyword,
@@ -108,6 +107,7 @@ pre .lua .built_in,
 pre .rsl .built_in,
 pre .tail,
 pre .avrasm .label,
+pre .parser3 .title,
 pre .tex .formula,
 pre .tex .formula *
 {
