--- a/src/styles/brown_paper.css
+++ b/src/styles/brown_paper.css
@@ -15,9 +15,7 @@ pre .change,
 pre .winutils,
 pre .flow,
 pre .lisp .title,
-pre .tex .special,
-pre .request,
-pre .status {
+pre .tex .special {
   color:#005599;
   font-weight:bold;
 }
@@ -29,8 +27,10 @@ pre .tag .keyword {
 }
 
 pre .string,
-pre .title,
-pre .haskell .type,
+pre .function .title,
+pre .class .title,
+pre .haskell .label,
+pre .ini .title,
 pre .tag .value,
 pre .css .rules .value,
 pre .preprocessor,
@@ -79,16 +79,19 @@ pre .keyword,
 pre .literal,
 pre .css .id,
 pre .phpdoc,
-pre .title,
-pre .haskell .type,
+pre .function .title,
+pre .class .title,
+pre .haskell .label,
 pre .vbscript .built_in,
 pre .sql .aggregate,
 pre .rsl .built_in,
 pre .smalltalk .class,
+pre .xml .tag .title,
 pre .diff .header,
 pre .chunk,
 pre .winutils,
 pre .bash .variable,
+pre .lisp .title,
 pre .apache .tag,
 pre .tex .command {
   font-weight: bold;
