--- a/src/styles/dark.css
+++ b/src/styles/dark.css
@@ -25,8 +25,9 @@ pre .ruby .subst {
 }
 
 pre .string,
-pre .title,
-pre .haskell .type,
+pre .function .title,
+pre .class .title,
+pre .haskell .label,
 pre .ini .title,
 pre .tag .value,
 pre .css .rules .value,
@@ -74,22 +75,23 @@ pre .tex .formula {
 
 pre .keyword,
 pre .literal,
-pre .title,
 pre .css .id,
 pre .phpdoc,
-pre .haskell .type,
+pre .function .title,
+pre .class .title,
+pre .haskell .label,
 pre .vbscript .built_in,
 pre .sql .aggregate,
 pre .rsl .built_in,
 pre .smalltalk .class,
+pre .xml .tag .title,
 pre .diff .header,
 pre .chunk,
 pre .winutils,
 pre .bash .variable,
+pre .lisp .title,
 pre .apache .tag,
-pre .tex .special,
-pre .request,
-pre .status {
+pre .tex .special {
   font-weight: bold;
 }
 
