--- a/src/styles/github.css
+++ b/src/styles/github.css
@@ -23,9 +23,7 @@ pre .css .rule .keyword,
 pre .winutils,
 pre .javascript .title,
 pre .lisp .title,
-pre .subst,
-pre .request,
-pre .status {
+pre .subst {
   color: #000;
   font-weight: bold
 }
@@ -55,8 +53,7 @@ pre .subst {
 }
 
 pre .class .title,
-pre .haskell .type,
-pre .vhdl .literal,
+pre .haskell .label,
 pre .tex .command {
   color: #458;
   font-weight: bold
