--- a/src/styles/school_book.css
+++ b/src/styles/school_book.css
@@ -34,8 +34,10 @@ pre .tag .keyword {
 }
 
 pre .string,
-pre .title,
-pre .haskell .type,
+pre .function .title,
+pre .class .title,
+pre .haskell .label,
+pre .ini .title,
 pre .tag .value,
 pre .css .rules .value,
 pre .preprocessor,
@@ -83,8 +85,9 @@ pre .keyword,
 pre .literal,
 pre .css .id,
 pre .phpdoc,
-pre .title,
-pre .haskell .type,
+pre .function .title,
+pre .class .title,
+pre .haskell .label,
 pre .vbscript .built_in,
 pre .sql .aggregate,
 pre .rsl .built_in,
@@ -94,10 +97,9 @@ pre .diff .header,
 pre .chunk,
 pre .winutils,
 pre .bash .variable,
+pre .lisp .title,
 pre .apache .tag,
-pre .tex .command,
-pre .request,
-pre .status {
+pre .tex .command {
   font-weight: bold;
 }
 
